kubernetes/network-policy/map-router-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: map-router-network-policy
  namespace: ism-system
spec:
  podSelector:
    matchLabels:
      app: map-router
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress
      ports:
        - protocol: TCP
          port: 8082
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ism-system
          podSelector:
            matchLabels:
              app: auth-service
      ports:
        - protocol: TCP
          port: 8082
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ism-mq
      ports:
        - protocol: TCP
          port: 4566
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openfaas-fn
      ports:
        - protocol: TCP
          port: 8080
