kubernetes/network-policy/opensearch-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opensearch-network-policy
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: opensearch
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openfaas-fn
          podSelector:
            matchLabels:
              faas_function: faas-m
      ports:
        - protocol: TCP
          port: 9200
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openfaas-fn
          podSelector:
            matchLabels:
              faas_function: faas-s
      ports:
        - protocol: TCP
          port: 9200
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ism-rag
      ports:
        - protocol: TCP
          port: 9200
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9600
