kubernetes/network-policy/rag-agent-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rag-network-policy
  namespace: ism-rag
spec:
  podSelector:
    matchLabels:
      app: rag-agent
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ism-system
          podSelector:
            matchLabels:
              app: map-router
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ism-mq
      ports:
        - protocol: TCP
          port: 4566
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
      ports:
        - protocol: TCP
          port: 9200
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ism-rag
          podSelector:
            matchLabels:
              app: ollama
      ports:
        - protocol: TCP
          port: 11434
