kubernetes/network-policy/sync-operator-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sync-operator-network-policy
  namespace: ism-system
spec:
  podSelector:
    matchLabels:
      app: sync-operator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9090
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ism-mq
      ports:
        - protocol: TCP
          port: 4566
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openfaas-fn
      ports:
        - protocol: TCP
          port: 8080
